// ============================================
// trip and end - ERD (dbdiagram.io)
// ============================================

Enum provider_type {
  kakao
  apple
  google
}

Enum trip_status {
  planning    // 계획 수립 중
  ongoing     // 여행 중
  completed   // 여행 종료 (기록 대상)
}

Enum member_role {
  owner
  editor
  viewer
}

Enum place_source {
  tourapi
  kakao
  custom      // 사용자가 직접 추가한 장소
}

Enum notification_type {
  trip_end_reminder   // 여행 종료 후 기록 유도 알림
  trip_invite         // 공동 계획 초대 알림
}

// ============================================
// 회원 / 인증
// ============================================

Table users {
  id uuid [pk, default: `gen_random_uuid()`]
  nickname varchar(30) [not null]
  profile_image_url text
  status varchar(20) [not null, default: 'active', note: 'active, withdrawn']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  withdrawn_at timestamptz [note: '탈퇴 시각, soft delete']
}

Table social_accounts {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id]
  provider provider_type [not null]
  provider_uid varchar(255) [not null, note: '제공자별 고유 식별자']
  email varchar(255)
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (provider, provider_uid) [unique]
  }

  Note: '한 명의 유저가 여러 소셜 계정을 연결할 수 있는 구조로 확장 대비'
}

Table user_devices {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id]
  push_token text [not null]
  platform varchar(10) [not null, note: 'ios, android']
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  last_active_at timestamptz [not null, default: `now()`]
}

// ============================================
// 여행 (계획 ~ 기록까지 하나의 라이프사이클)
// ============================================

Table trips {
  id uuid [pk, default: `gen_random_uuid()`]
  owner_id uuid [not null, ref: > users.id]
  title varchar(100) [not null]
  city_name varchar(100) [not null, note: '대표 도시/지역명']
  area_code varchar(10) [note: 'TourAPI 지역코드']
  sigungu_code varchar(10) [note: 'TourAPI 시군구코드']
  start_date date [not null]
  end_date date [not null]
  status trip_status [not null, default: 'planning']
  cover_image_url text [note: 'record_photos 중 대표사진 지정 시 갱신']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz [note: '사용자 삭제, soft delete']
}

Table trip_members {
  id uuid [pk, default: `gen_random_uuid()`]
  trip_id uuid [not null, ref: > trips.id]
  user_id uuid [not null, ref: > users.id]
  role member_role [not null, default: 'editor']
  joined_at timestamptz [not null, default: `now()`]

  indexes {
    (trip_id, user_id) [unique]
  }
}

Table trip_invite_links {
  id uuid [pk, default: `gen_random_uuid()`]
  trip_id uuid [not null, ref: > trips.id]
  token varchar(64) [not null, unique]
  created_by uuid [not null, ref: > users.id]
  expires_at timestamptz
  created_at timestamptz [not null, default: `now()`]
}

// ============================================
// 장소 마스터 (TourAPI / Kakao / 커스텀)
// ============================================

Table places {
  id uuid [pk, default: `gen_random_uuid()`]
  source place_source [not null, default: 'tourapi']
  external_id varchar(50) [note: 'TourAPI contentId 등 외부 식별자']
  content_type_id varchar(10) [note: 'TourAPI 분류: 관광지/문화시설/음식점 등']
  name varchar(200) [not null]
  address varchar(300)
  latitude decimal(10,7)
  longitude decimal(10,7)
  area_code varchar(10)
  sigungu_code varchar(10)
  category_code varchar(20) [note: 'TourAPI cat1/cat2/cat3 조합']
  tel varchar(50)
  image_url text
  overview text
  synced_at timestamptz [note: 'TourAPI 동기화 시각']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (source, external_id) [unique]
    (area_code, sigungu_code)
    (latitude, longitude)
  }

  Note: 'TourAPI/카카오 응답을 캐싱하는 마스터 테이블. 외부 API 재호출 최소화'
}

// ============================================
// 여행 계획 상세 (일자별 장소 목록)
// ============================================

Table trip_places {
  id uuid [pk, default: `gen_random_uuid()`]
  trip_id uuid [not null, ref: > trips.id]
  place_id uuid [ref: > places.id, note: 'null이면 custom_* 필드 사용']
  day_number int [not null, note: '여행 n일차']
  order_in_day int [not null, note: '해당 일자 내 방문 순서']
  custom_name varchar(200) [note: 'place_id 없을 때 사용자 직접 입력 장소명']
  custom_address varchar(300)
  memo text
  added_by uuid [not null, ref: > users.id]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (trip_id, day_number, order_in_day)
  }
}

Table ai_plan_requests {
  id uuid [pk, default: `gen_random_uuid()`]
  trip_id uuid [not null, ref: > trips.id]
  requested_by uuid [not null, ref: > users.id]
  prompt_text text [not null, note: '사용자가 입력한 추가 프롬프트']
  response_summary text [note: 'AI 응답 요약 로그']
  created_at timestamptz [not null, default: `now()`]

  Note: 'AI 계획 생성/수정 요청 이력. 추후 개인화 추천 모델 학습 데이터로 활용 가능'
}

// ============================================
// 여행 기록 (사진 + 일기)
// ============================================

Table travel_records {
  id uuid [pk, default: `gen_random_uuid()`]
  trip_id uuid [not null, ref: > trips.id]
  user_id uuid [not null, ref: > users.id, note: '기록 작성자. 동행자 각자 자신의 기록 작성 가능']
  title varchar(100)
  content text [note: '여행 일기 본문']
  status varchar(20) [not null, default: 'draft', note: 'draft, published']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz

  indexes {
    (trip_id, user_id) [unique, note: '한 여행당 사용자 1인 1기록']
  }
}

Table record_photos {
  id uuid [pk, default: `gen_random_uuid()`]
  record_id uuid [not null, ref: > travel_records.id]
  storage_url text [not null, note: '최종 선택된 사진만 저장 (오브젝트 스토리지)']
  taken_at timestamptz [note: 'EXIF에서 추출한 촬영일시']
  location_name varchar(200) [note: 'GPS 좌표를 변환한 지명, 원본 좌표는 미저장']
  caption text [note: '사진별 사용자 작성 글']
  order_index int [not null, default: 0]
  is_cover boolean [not null, default: false]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (record_id, order_index)
  }

  Note: 'AI가 추천했으나 미선택된 사진은 서버에 저장되지 않으므로 이 테이블에 없음 (pass-through 처리)'
}

// ============================================
// 알림
// ============================================

Table notification_logs {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id]
  trip_id uuid [ref: > trips.id]
  type notification_type [not null]
  sent_at timestamptz [not null, default: `now()`]
  clicked_at timestamptz [note: '사용자가 알림을 클릭해 기록 작성을 시작한 시각']
}
